--- a/edit/photos.html
+++ b/edit/photos.html
@@ -3491,7 +3491,7 @@
                  </div>
                 </label>
                </div>
-               <div class="_4ce89o"><span class="a8jt5op dir dir-ltr" aria-live="assertive"></span></div>
+               <div class="_4ce89o"><span class="visually-hidden dir dir-ltr" aria-live="assertive"></span></div>
               </div>
              </div>
             </div>
