--- a/help/feedback.html
+++ b/help/feedback.html
@@ -1236,8 +1236,8 @@
             </span>
             <div class="s5vb0u3 dir dir-ltr">
              <div>
-              <div class="a1vub294 dir dir-ltr" role="status" aria-atomic="true" aria-live="polite">3 search suggestions</div>
-              <div class="a1vub294 dir dir-ltr" role="status" aria-atomic="true" aria-live="polite"></div>
+              <div class="visually-hidden dir dir-ltr" role="status" aria-atomic="true" aria-live="polite">3 search suggestions</div>
+              <div class="visually-hidden dir dir-ltr" role="status" aria-atomic="true" aria-live="polite"></div>
               <form class="ctqyxkl c1tt8vn6 dir dir-ltr" role="search">
                <input
                 type="search"
@@ -1296,7 +1296,7 @@
                 </li>
                </ul>
               </div>
-              <div class="a1vub294 dir dir-ltr" id="search-suggestions-instructions">
+              <div class="visually-hidden dir dir-ltr" id="search-suggestions-instructions">
                Suggestions will show after typing in the search input. Use the up and down arrows to review. Use enter to select. If the selection is a phrase, that phrase will be submitted to search. If the suggestion is a link, the browser
                will navigate to that page.
               </div>
