--- a/listings-product/contact-host-message.html
+++ b/listings-product/contact-host-message.html
@@ -153,7 +153,7 @@
                                                               >
                                                             </div>
                                                             <span
-                                                              class="a8jt5op dir dir-ltr"
+                                                              class="visually-hidden dir dir-ltr"
                                                               >₱49,950 per
                                                               night</span
                                                             ></span
@@ -188,7 +188,7 @@
                                                                 reviews</span
                                                               ></span
                                                             ><span
-                                                              class="a8jt5op dir dir-ltr"
+                                                              class="visually-hidden dir dir-ltr"
                                                               >Rated 4.97 out of
                                                               5 from 139
                                                               reviews.</span
