--- a/listings-product/explore-where.html
+++ b/listings-product/explore-where.html
@@ -1299,7 +1299,7 @@
     aria-labelledby="destinationChipsSectionID-DLS-chipGroup-label"
   >
     <div class="dir dir-ltr" id="destinationChipsSectionID-DLS-chipGroup-label">
-      <span class="a8jt5op dir dir-ltr">Search by region</span>
+      <span class="visually-hidden dir dir-ltr">Search by region</span>
     </div>
     <div class="d10ugdmb dir dir-ltr">
       <div class="d1i8eay0 dir dir-ltr">
@@ -1316,7 +1316,7 @@
               src="https://a0.muscache.com/pictures/f9ec8a23-ed44-420b-83e5-10ff1f071a13.jpg"
             />
             <div class="ioa2q3t dir dir-ltr"></div>
-            <span class="a8jt5op dir dir-ltr">I’m flexible</span
+            <span class="visually-hidden dir dir-ltr">I’m flexible</span
             ><span aria-hidden="true" class="_1x0xu65p"
               ><img
                 class="i17d61fu dir dir-ltr"
@@ -1344,7 +1344,7 @@
               src="https://a0.muscache.com/im/pictures/7b5cf816-6c16-49f8-99e5-cbc4adfd97e2.jpg?im_w=320"
             />
             <div class="ioa2q3t dir dir-ltr"></div>
-            <span class="a8jt5op dir dir-ltr">Europe</span
+            <span class="visually-hidden dir dir-ltr">Europe</span
             ><span aria-hidden="true" class="_1x0xu65p"
               ><img
                 class="i17d61fu dir dir-ltr"
@@ -1370,7 +1370,7 @@
               src="https://a0.muscache.com/im/pictures/f0ece7c0-d9b2-49d5-bb83-64173d29cbe3.jpg?im_w=320"
             />
             <div class="ioa2q3t dir dir-ltr"></div>
-            <span class="a8jt5op dir dir-ltr">France</span
+            <span class="visually-hidden dir dir-ltr">France</span
             ><span aria-hidden="true" class="_1x0xu65p"
               ><img
                 class="i17d61fu dir dir-ltr"
@@ -1396,7 +1396,7 @@
               src="https://a0.muscache.com/im/pictures/4e762891-75a3-4fe1-b73a-cd7e673ba915.jpg?im_w=320"
             />
             <div class="ioa2q3t dir dir-ltr"></div>
-            <span class="a8jt5op dir dir-ltr">United States</span
+            <span class="visually-hidden dir dir-ltr">United States</span
             ><span aria-hidden="true" class="_1x0xu65p"
               ><img
                 class="i17d61fu dir dir-ltr"
@@ -1422,7 +1422,7 @@
               src="https://a0.muscache.com/im/pictures/dbb2b5ef-2efe-4099-81ac-c7b957f384ed.jpg?im_w=320"
             />
             <div class="ioa2q3t dir dir-ltr"></div>
-            <span class="a8jt5op dir dir-ltr">United Kingdom</span
+            <span class="visually-hidden dir dir-ltr">United Kingdom</span
             ><span aria-hidden="true" class="_1x0xu65p"
               ><img
                 class="i17d61fu dir dir-ltr"
@@ -1448,7 +1448,7 @@
               src="https://a0.muscache.com/im/pictures/06a30699-aead-492e-ad08-33ec0b383399.jpg?im_w=320"
             />
             <div class="ioa2q3t dir dir-ltr"></div>
-            <span class="a8jt5op dir dir-ltr">South America</span
+            <span class="visually-hidden dir dir-ltr">South America</span
             ><span aria-hidden="true" class="_1x0xu65p"
               ><img
                 class="i17d61fu dir dir-ltr"
@@ -1474,7 +1474,7 @@
               src="https://a0.muscache.com/im/pictures/a0fd6dfc-6bec-4abb-850e-9ab78ed7bf37.jpg?im_w=320"
             />
             <div class="ioa2q3t dir dir-ltr"></div>
-            <span class="a8jt5op dir dir-ltr">Spain</span
+            <span class="visually-hidden dir dir-ltr">Spain</span
             ><span aria-hidden="true" class="_1x0xu65p"
               ><img
                 class="i17d61fu dir dir-ltr"
@@ -1500,7 +1500,7 @@
               src="https://a0.muscache.com/im/pictures/c61d10f5-4ab3-4d16-bed7-0449e15c8277.jpg?im_w=320"
             />
             <div class="ioa2q3t dir dir-ltr"></div>
-            <span class="a8jt5op dir dir-ltr">Caribbean</span
+            <span class="visually-hidden dir dir-ltr">Caribbean</span
             ><span aria-hidden="true" class="_1x0xu65p"
               ><img
                 class="i17d61fu dir dir-ltr"
@@ -1526,7 +1526,7 @@
               src="https://a0.muscache.com/im/pictures/ea5598d7-2b07-4ed7-84da-d1eabd9f2714.jpg?im_w=320"
             />
             <div class="ioa2q3t dir dir-ltr"></div>
-            <span class="a8jt5op dir dir-ltr">Italy</span
+            <span class="visually-hidden dir dir-ltr">Italy</span
             ><span aria-hidden="true" class="_1x0xu65p"
               ><img
                 class="i17d61fu dir dir-ltr"
@@ -1552,7 +1552,7 @@
               src="https://a0.muscache.com/im/pictures/a940f971-4ac1-413b-90dd-bd55965b215e.jpg?im_w=320"
             />
             <div class="ioa2q3t dir dir-ltr"></div>
-            <span class="a8jt5op dir dir-ltr">Mexico</span
+            <span class="visually-hidden dir dir-ltr">Mexico</span
             ><span aria-hidden="true" class="_1x0xu65p"
               ><img
                 class="i17d61fu dir dir-ltr"
