--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -2492,7 +2492,7 @@
                     <div class="_dyh67hw">Private groups only</div>
                     <div class="_i3mzil">
                       <div class="_5kaapu">
-                        <span class="a8jt5op dir dir-ltr"
+                        <span class="visually-hidden dir dir-ltr"
                           >From ₱4,674 per group</span
                         ><span aria-hidden="true"
                           ><span class="_1jmcgvx">From ₱4,674</span
@@ -2545,7 +2545,7 @@
                     <div class="_dyh67hw">Private groups only</div>
                     <div class="_i3mzil">
                       <div class="_5kaapu">
-                        <span class="a8jt5op dir dir-ltr"
+                        <span class="visually-hidden dir dir-ltr"
                           >From ₱4,674 per group</span
                         ><span aria-hidden="true"
                           ><span class="_1jmcgvx">From ₱4,674</span
@@ -2598,7 +2598,7 @@
                     <div class="_dyh67hw">Private groups only</div>
                     <div class="_i3mzil">
                       <div class="_5kaapu">
-                        <span class="a8jt5op dir dir-ltr"
+                        <span class="visually-hidden dir dir-ltr"
                           >From ₱4,674 per group</span
                         ><span aria-hidden="true"
                           ><span class="_1jmcgvx">From ₱4,674</span
@@ -2651,7 +2651,7 @@
                     <div class="_dyh67hw">Private groups only</div>
                     <div class="_i3mzil">
                       <div class="_5kaapu">
-                        <span class="a8jt5op dir dir-ltr"
+                        <span class="visually-hidden dir dir-ltr"
                           >From ₱4,674 per group</span
                         ><span aria-hidden="true"
                           ><span class="_1jmcgvx">From ₱4,674</span
@@ -2704,7 +2704,7 @@
                     <div class="_dyh67hw">Private groups only</div>
                     <div class="_i3mzil">
                       <div class="_5kaapu">
-                        <span class="a8jt5op dir dir-ltr"
+                        <span class="visually-hidden dir dir-ltr"
                           >From ₱4,674 per group</span
                         ><span aria-hidden="true"
                           ><span class="_1jmcgvx">From ₱4,674</span
@@ -2757,7 +2757,7 @@
                     <div class="_dyh67hw">Private groups only</div>
                     <div class="_i3mzil">
                       <div class="_5kaapu">
-                        <span class="a8jt5op dir dir-ltr"
+                        <span class="visually-hidden dir dir-ltr"
                           >From ₱4,674 per group</span
                         ><span aria-hidden="true"
                           ><span class="_1jmcgvx">From ₱4,674</span
@@ -2810,7 +2810,7 @@
                     <div class="_dyh67hw">Private groups only</div>
                     <div class="_i3mzil">
                       <div class="_5kaapu">
-                        <span class="a8jt5op dir dir-ltr"
+                        <span class="visually-hidden dir dir-ltr"
                           >From ₱4,674 per group</span
                         ><span aria-hidden="true"
                           ><span class="_1jmcgvx">From ₱4,674</span
@@ -2863,7 +2863,7 @@
                     <div class="_dyh67hw">Private groups only</div>
                     <div class="_i3mzil">
                       <div class="_5kaapu">
-                        <span class="a8jt5op dir dir-ltr"
+                        <span class="visually-hidden dir dir-ltr"
                           >From ₱4,674 per group</span
                         ><span aria-hidden="true"
                           ><span class="_1jmcgvx">From ₱4,674</span
@@ -6535,7 +6535,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                               </div>
                                                               <div>
                                                                 <div class="_cc33gu">
-                                                                  <div class="_12ir4kp"><span class="a8jt5op dir dir-ltr">₱1,460 per person</span><span
+                                                                  <div class="_12ir4kp"><span class="visually-hidden dir dir-ltr">₱1,460 per person</span><span
                                                                       aria-hidden="true"><span class="_1jmcgvx">₱1,460</span><span class="_1ukkxd4">/ person </span></span>
                                                                   </div>
                                                                   <div class="_lavth4">
@@ -6564,7 +6564,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                               </div>
                                                               <div>
                                                                 <div class="_cc33gu">
-                                                                  <div class="_12ir4kp"><span class="a8jt5op dir dir-ltr">₱1,460 per person</span><span
+                                                                  <div class="_12ir4kp"><span class="visually-hidden dir dir-ltr">₱1,460 per person</span><span
                                                                       aria-hidden="true"><span class="_1jmcgvx">₱1,460</span><span class="_1ukkxd4">/ person </span></span>
                                                                   </div>
                                                                   <div class="_lavth4">
@@ -6592,7 +6592,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                               </div>
                                                               <div>
                                                                 <div class="_cc33gu">
-                                                                  <div class="_12ir4kp"><span class="a8jt5op dir dir-ltr">₱1,460 per person</span><span
+                                                                  <div class="_12ir4kp"><span class="visually-hidden dir dir-ltr">₱1,460 per person</span><span
                                                                       aria-hidden="true"><span class="_1jmcgvx">₱1,460</span><span class="_1ukkxd4">/ person </span></span>
                                                                   </div>
                                                                   <div class="_lavth4">
@@ -11024,7 +11024,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                           <div class="_12ifn8">
                                                             <div class="_v4721jw">
                                                               <div class="_1tnoauk">
-                                                                <div>3:00 AM–3:30 AM (PST)<div class="_1xsy2vy"><span class="a8jt5op dir dir-ltr">₱1,470 per person</span><span
+                                                                <div>3:00 AM–3:30 AM (PST)<div class="_1xsy2vy"><span class="visually-hidden dir dir-ltr">₱1,470 per person</span><span
                                                                       aria-hidden="true"><span class="_1jmcgvx">₱1,470</span><span class="_1ukkxd4">/ person </span></span>
                                                                   </div>
                                                                 </div>
@@ -11137,7 +11137,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                         <div class="_12ifn8">
                                                           <div class="_v4721jw">
                                                             <div class="_1tnoauk">
-                                                              <div>3:00 AM–3:30 AM (PST)<div class="_1xsy2vy"><span class="a8jt5op dir dir-ltr">₱1,470 per person</span><span
+                                                              <div>3:00 AM–3:30 AM (PST)<div class="_1xsy2vy"><span class="visually-hidden dir dir-ltr">₱1,470 per person</span><span
                                                                     aria-hidden="true"><span class="_1jmcgvx">₱1,470</span><span class="_1ukkxd4">/ person </span></span>
                                                                 </div>
                                                               </div>
