--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -24322,7 +24322,7 @@
                                   <span class="_14y1gc">
                                     <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱452,930</span><span
                                         class="_r1nvod">&nbsp;night</span></div>
-                                    <span class="a8jt5op dir dir-ltr">₱452,930 per night</span>
+                                    <span class="visually-hidden dir dir-ltr">₱452,930 per night</span>
                                   </span>
                                 </div>
                               </div>
