--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -5202,7 +5202,7 @@
                                                             <span class="_tyxjp1">₱44,974</span><span
                                                               class="_r1nvod">&nbsp;night</span>
                                                           </div>
-                                                          <span class="a8jt5op dir dir-ltr">₱44,974 per night</span>
+                                                          <span class="visually-hidden dir dir-ltr">₱44,974 per night</span>
                                                         </span>
                                                       </div>
                                                     </div>
