--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -29219,7 +29219,7 @@
                                         <div class="_ati8ih"><span class="_14y1gc">
                                             <div class="_1jo4hgw" aria-hidden="true"><span
                                                 class="_tyxjp1">₱49,950</span><span class="_r1nvod">&nbsp;night</span>
-                                            </div><span class="a8jt5op dir dir-ltr">₱49,950 per night</span>
+                                            </div><span class="visually-hidden dir dir-ltr">₱49,950 per night</span>
                                           </span></div>
                                       </div>
                                       <div class="_176k0ns"><span class="_1pg77l15"><span class="_9qqdp4"
@@ -29231,7 +29231,7 @@
                                                 d="M15.094 1.579l-4.124 8.885-9.86 1.27a1 1 0 0 0-.542 1.736l7.293 6.565-1.965 9.852a1 1 0 0 0 1.483 1.061L16 25.951l8.625 4.997a1 1 0 0 0 1.482-1.06l-1.965-9.853 7.293-6.565a1 1 0 0 0-.541-1.735l-9.86-1.271-4.127-8.885a1 1 0 0 0-1.814 0z"
                                                 fill-rule="evenodd"></path>
                                             </svg></span><span class="_12si43g" aria-hidden="true">4.97</span><span
-                                            class="a8jt5op dir dir-ltr">Rated 4.97 out of 5 from 139
+                                            class="visually-hidden dir dir-ltr">Rated 4.97 out of 5 from 139
                                             reviews.</span></span></div>
                                     </div>
                                     <div class="_75d5jt">
