--- a/listings-product/rental.html
+++ b/listings-product/rental.html
@@ -6576,7 +6576,7 @@
                               <div class="cbdpsi8 dir dir-ltr" style="--reveal-duration: 250ms; --shimmer-duration: 750ms; --reveal-delay: 250ms; --shimmer-scale-x: 1;">
                                <div>
                                 <div aria-describedby="carousel-description" class="rztl681 dir dir-ltr" role="group" aria-label="Types of stays">
-                                 <div class="dbldy2s dir dir-ltr" id="carousel-description">17 of 22 items showing</div>
+                                 <div class="visually-hidden dir dir-ltr" id="carousel-description">17 of 22 items showing</div>
                                  <div class="c18vjgz6 dir dir-ltr">
                                   <div class="bioo66e p1rbh6uo dir dir-ltr">
                                    <button aria-label="Previous" data-shared-element-id="previous-button" type="button" class="vmfx3gj dir dir-ltr">
@@ -6810,7 +6810,7 @@
                                   <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" style="display: block; height: 14px; width: 14px; fill: currentColor;" aria-hidden="true" role="presentation" focusable="false">
                                    <path d="M5 8c1.306 0 2.418.835 2.83 2H14v2H7.829A3.001 3.001 0 1 1 5 8zm0 2a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm6-8a3 3 0 1 1-2.829 4H2V4h6.17A3.001 3.001 0 0 1 11 2zm0 2a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"></path>
                                   </svg>
-                                  <span class="t1o11edy dir dir-ltr">Filters</span><span class="a8jt5op dir dir-ltr">, 1 filter applied</span>
+                                  <span class="t1o11edy dir dir-ltr">Filters</span><span class="visually-hidden dir dir-ltr">, 1 filter applied</span>
                                  </span>
                                 </button>
                                 <div aria-hidden="true" class="b1qnlf0s bkr0hlw dir dir-ltr"><div class="n13e4ez0 dir dir-ltr">1</div></div>
@@ -6987,7 +6987,7 @@
                                             <div class="_1jo4hgw" aria-hidden="true">
                                             <span><span class="_1ks8cgb">₱3,765</span>&nbsp;</span><span class="_tyxjp1">₱2,370</span><span class="_1vylq8i">&nbsp;night</span>
                                             </div>
-                                            <span class="a8jt5op dir dir-ltr">₱2,370 per night, originally ₱3,765</span>
+                                            <span class="visually-hidden dir dir-ltr">₱2,370 per night, originally ₱3,765</span>
                                           </span>
                                           </div>
                                         </div>
@@ -7315,7 +7315,7 @@
                                             <div class="_1jo4hgw" aria-hidden="true">
                                             <span><span class="_1ks8cgb">₱2,775</span>&nbsp;</span><span class="_tyxjp1">₱2,286</span><span class="_1vylq8i">&nbsp;night</span>
                                             </div>
-                                            <span class="a8jt5op dir dir-ltr">₱2,286 per night, originally ₱2,775</span>
+                                            <span class="visually-hidden dir dir-ltr">₱2,286 per night, originally ₱2,775</span>
                                           </span>
                                           </div>
                                         </div>
@@ -7621,7 +7621,7 @@
                                           <div class="_i5duul">
                                           <span class="_14y1gc">
                                             <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱1,882</span><span class="_r1nvod">&nbsp;night</span></div>
-                                            <span class="a8jt5op dir dir-ltr">₱1,882 per night</span>
+                                            <span class="visually-hidden dir dir-ltr">₱1,882 per night</span>
                                           </span>
                                           </div>
                                         </div>
@@ -7945,7 +7945,7 @@
                                           <div class="_i5duul">
                                           <span class="_14y1gc">
                                             <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱2,879</span><span class="_r1nvod">&nbsp;night</span></div>
-                                            <span class="a8jt5op dir dir-ltr">₱2,879 per night</span>
+                                            <span class="visually-hidden dir dir-ltr">₱2,879 per night</span>
                                           </span>
                                           </div>
                                         </div>
@@ -8273,7 +8273,7 @@
                                             <div class="_1jo4hgw" aria-hidden="true">
                                             <span><span class="_1ks8cgb">₱2,639</span>&nbsp;</span><span class="_tyxjp1">₱2,337</span><span class="_1vylq8i">&nbsp;night</span>
                                             </div>
-                                            <span class="a8jt5op dir dir-ltr">₱2,337 per night, originally ₱2,639</span>
+                                            <span class="visually-hidden dir dir-ltr">₱2,337 per night, originally ₱2,639</span>
                                           </span>
                                           </div>
                                         </div>
@@ -8576,7 +8576,7 @@
                                           <div class="_i5duul">
                                           <span class="_14y1gc">
                                             <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱3,182</span><span class="_r1nvod">&nbsp;night</span></div>
-                                            <span class="a8jt5op dir dir-ltr">₱3,182 per night</span>
+                                            <span class="visually-hidden dir dir-ltr">₱3,182 per night</span>
                                           </span>
                                           </div>
                                         </div>
@@ -8881,7 +8881,7 @@
                                             <div class="_1jo4hgw" aria-hidden="true">
                                             <span><span class="_1ks8cgb">₱4,915</span>&nbsp;</span><span class="_tyxjp1">₱3,706</span><span class="_1vylq8i">&nbsp;night</span>
                                             </div>
-                                            <span class="a8jt5op dir dir-ltr">₱3,706 per night, originally ₱4,915</span>
+                                            <span class="visually-hidden dir dir-ltr">₱3,706 per night, originally ₱4,915</span>
                                           </span>
                                           </div>
                                         </div>
@@ -9184,7 +9184,7 @@
                                           <div class="_i5duul">
                                           <span class="_14y1gc">
                                             <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱2,654</span><span class="_r1nvod">&nbsp;night</span></div>
-                                            <span class="a8jt5op dir dir-ltr">₱2,654 per night</span>
+                                            <span class="visually-hidden dir dir-ltr">₱2,654 per night</span>
                                           </span>
                                           </div>
                                         </div>
@@ -9489,7 +9489,7 @@
                                           <div class="_i5duul">
                                           <span class="_14y1gc">
                                             <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱2,619</span><span class="_r1nvod">&nbsp;night</span></div>
-                                            <span class="a8jt5op dir dir-ltr">₱2,619 per night</span>
+                                            <span class="visually-hidden dir dir-ltr">₱2,619 per night</span>
                                           </span>
                                           </div>
                                         </div>
@@ -9795,7 +9795,7 @@
                                           <div class="_i5duul">
                                           <span class="_14y1gc">
                                             <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱2,554</span><span class="_r1nvod">&nbsp;night</span></div>
-                                            <span class="a8jt5op dir dir-ltr">₱2,554 per night</span>
+                                            <span class="visually-hidden dir dir-ltr">₱2,554 per night</span>
                                           </span>
                                           </div>
                                         </div>
@@ -10101,7 +10101,7 @@
                                           <div class="_i5duul">
                                           <span class="_14y1gc">
                                             <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱2,338</span><span class="_r1nvod">&nbsp;night</span></div>
-                                            <span class="a8jt5op dir dir-ltr">₱2,338 per night</span>
+                                            <span class="visually-hidden dir dir-ltr">₱2,338 per night</span>
                                           </span>
                                           </div>
                                         </div>
@@ -10404,7 +10404,7 @@
                                           <div class="_i5duul">
                                           <span class="_14y1gc">
                                             <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱3,198</span><span class="_r1nvod">&nbsp;night</span></div>
-                                            <span class="a8jt5op dir dir-ltr">₱3,198 per night</span>
+                                            <span class="visually-hidden dir dir-ltr">₱3,198 per night</span>
                                           </span>
                                           </div>
                                         </div>
@@ -10707,7 +10707,7 @@
                                           <div class="_i5duul">
                                           <span class="_14y1gc">
                                             <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱3,627</span><span class="_r1nvod">&nbsp;night</span></div>
-                                            <span class="a8jt5op dir dir-ltr">₱3,627 per night</span>
+                                            <span class="visually-hidden dir dir-ltr">₱3,627 per night</span>
                                           </span>
                                           </div>
                                         </div>
@@ -11015,7 +11015,7 @@
                                             <div class="_1jo4hgw" aria-hidden="true">
                                             <span><span class="_1ks8cgb">₱5,661</span>&nbsp;</span><span class="_tyxjp1">₱3,675</span><span class="_1vylq8i">&nbsp;night</span>
                                             </div>
-                                            <span class="a8jt5op dir dir-ltr">₱3,675 per night, originally ₱5,661</span>
+                                            <span class="visually-hidden dir dir-ltr">₱3,675 per night, originally ₱5,661</span>
                                           </span>
                                           </div>
                                         </div>
@@ -11321,7 +11321,7 @@
                                           <div class="_i5duul">
                                           <span class="_14y1gc">
                                             <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱2,481</span><span class="_r1nvod">&nbsp;night</span></div>
-                                            <span class="a8jt5op dir dir-ltr">₱2,481 per night</span>
+                                            <span class="visually-hidden dir dir-ltr">₱2,481 per night</span>
                                           </span>
                                           </div>
                                         </div>
@@ -11627,7 +11627,7 @@
                                           <div class="_i5duul">
                                           <span class="_14y1gc">
                                             <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱2,242</span><span class="_r1nvod">&nbsp;night</span></div>
-                                            <span class="a8jt5op dir dir-ltr">₱2,242 per night</span>
+                                            <span class="visually-hidden dir dir-ltr">₱2,242 per night</span>
                                           </span>
                                           </div>
                                         </div>
@@ -11930,7 +11930,7 @@
                                           <div class="_i5duul">
                                           <span class="_14y1gc">
                                             <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱2,985</span><span class="_r1nvod">&nbsp;night</span></div>
-                                            <span class="a8jt5op dir dir-ltr">₱2,985 per night</span>
+                                            <span class="visually-hidden dir dir-ltr">₱2,985 per night</span>
                                           </span>
                                           </div>
                                         </div>
@@ -12222,7 +12222,7 @@
                                           <div class="_i5duul">
                                           <span class="_14y1gc">
                                             <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱3,472</span><span class="_r1nvod">&nbsp;night</span></div>
-                                            <span class="a8jt5op dir dir-ltr">₱3,472 per night</span>
+                                            <span class="visually-hidden dir dir-ltr">₱3,472 per night</span>
                                           </span>
                                           </div>
                                         </div>
@@ -12528,7 +12528,7 @@
                                           <div class="_i5duul">
                                           <span class="_14y1gc">
                                             <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱2,935</span><span class="_r1nvod">&nbsp;night</span></div>
-                                            <span class="a8jt5op dir dir-ltr">₱2,935 per night</span>
+                                            <span class="visually-hidden dir dir-ltr">₱2,935 per night</span>
                                           </span>
                                           </div>
                                         </div>
@@ -12835,7 +12835,7 @@
                                             <div class="_1jo4hgw" aria-hidden="true">
                                             <span><span class="_1ks8cgb">₱4,092</span>&nbsp;</span><span class="_tyxjp1">₱3,719</span><span class="_1vylq8i">&nbsp;night</span>
                                             </div>
-                                            <span class="a8jt5op dir dir-ltr">₱3,719 per night, originally ₱4,092</span>
+                                            <span class="visually-hidden dir dir-ltr">₱3,719 per night, originally ₱4,092</span>
                                           </span>
                                           </div>
                                         </div>
