--- a/listings-product/specific_trip.html
+++ b/listings-product/specific_trip.html
@@ -6623,7 +6623,7 @@
                                                   </path>
                                                 </svg></span></button></div>
                                         </div>
-                                        <div class="w1ltfm8b dir dir-ltr"><label class="l1sc6kfc dir dir-ltr" for="message_input"></label>
+                                        <div class="w1ltfm8b dir dir-ltr"><label class="visually-hidden dir dir-ltr" for="message_input"></label>
                                           <div class="c1w12wz0 dir dir-ltr"><textarea class="t17tp91i t1md6muk dir dir-ltr" id="message_input" data-testid="messaging-composebar" label="Type a message" placeholder="Type a message" style="height: 40px;"></textarea></div>
                                         </div>
                                       </div>
