--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -346,8 +346,8 @@
                                             <div class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr" style="--media-container_border-radius:var(--border-radius-lg);">
                                               <div class="_1llsa9z" style="background: var(--gray-200); --dls-basecard-aspect-ratio:3 / 2; --dls-basecard-padding-top:66.6667%;">
                                                 <div class="_j4sd8n">
-                                                  <div aria-describedby="carousel-description" class="c1th86dr card__carousel-desc-wrapper dir dir-ltr" role="group" style="--aspect_ratio_wrapper-ratio:0.666667 / 1; --aspect_ratio_wrapper-padding_fallback:150%; --aspect_ratio_wrapper-position_fallback:relative;">
-                                                    <div class="card__carousel-desc dir dir-ltr">
+                                                  <div aria-describedby="carousel-description" class="c1th86dr visually-hidden-wrapper dir dir-ltr" role="group" style="--aspect_ratio_wrapper-ratio:0.666667 / 1; --aspect_ratio_wrapper-padding_fallback:150%; --aspect_ratio_wrapper-position_fallback:relative;">
+                                                    <div class="visually-hidden dir dir-ltr">
                                                       1 of 18 items showing</div>
                                                     <div class="card__controls-wrapper dir dir-ltr">
                                                       <div class="place__img-action-btns-wrapper o1s954ha dir dir-ltr" style="--media-overlay_top-row-padding:var(--spacer-3);">
@@ -580,8 +580,8 @@
                                             <div class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr" style="--media-container_border-radius:var(--border-radius-lg);">
                                               <div class="_1llsa9z" style="background: var(--gray-200); --dls-basecard-aspect-ratio:3 / 2; --dls-basecard-padding-top:66.6667%;">
                                                 <div class="_j4sd8n">
-                                                  <div aria-describedby="carousel-description" class="c1th86dr card__carousel-desc-wrapper dir dir-ltr" role="group" style="--aspect_ratio_wrapper-ratio:0.666667 / 1; --aspect_ratio_wrapper-padding_fallback:150%; --aspect_ratio_wrapper-position_fallback:relative;">
-                                                    <div class="card__carousel-desc dir dir-ltr">
+                                                  <div aria-describedby="carousel-description" class="c1th86dr visually-hidden-wrapper dir dir-ltr" role="group" style="--aspect_ratio_wrapper-ratio:0.666667 / 1; --aspect_ratio_wrapper-padding_fallback:150%; --aspect_ratio_wrapper-position_fallback:relative;">
+                                                    <div class="visually-hidden dir dir-ltr">
                                                       1 of 30 items showing</div>
                                                     <div class="card__controls-wrapper dir dir-ltr">
                                                       <div class="place__img-action-btns-wrapper o1s954ha dir dir-ltr" style="--media-overlay_top-row-padding:var(--spacer-3);">
@@ -872,8 +872,8 @@
                                             <div class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr" style="--media-container_border-radius:var(--border-radius-lg);">
                                               <div class="_1llsa9z" style="background: var(--gray-200); --dls-basecard-aspect-ratio:3 / 2; --dls-basecard-padding-top:66.6667%;">
                                                 <div class="_j4sd8n">
-                                                  <div aria-describedby="carousel-description" class="c1th86dr card__carousel-desc-wrapper dir dir-ltr" role="group" style="--aspect_ratio_wrapper-ratio:0.666667 / 1; --aspect_ratio_wrapper-padding_fallback:150%; --aspect_ratio_wrapper-position_fallback:relative;">
-                                                    <div class="card__carousel-desc dir dir-ltr">
+                                                  <div aria-describedby="carousel-description" class="c1th86dr visually-hidden-wrapper dir dir-ltr" role="group" style="--aspect_ratio_wrapper-ratio:0.666667 / 1; --aspect_ratio_wrapper-padding_fallback:150%; --aspect_ratio_wrapper-position_fallback:relative;">
+                                                    <div class="visually-hidden dir dir-ltr">
                                                       1 of 30 items showing</div>
                                                     <div class="card__controls-wrapper dir dir-ltr">
                                                       <div class="place__img-action-btns-wrapper o1s954ha dir dir-ltr" style="--media-overlay_top-row-padding:var(--spacer-3);">
@@ -1124,8 +1124,8 @@
                                             <div class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr" style="--media-container_border-radius:var(--border-radius-lg);">
                                               <div class="_1llsa9z" style="background: var(--gray-200); --dls-basecard-aspect-ratio:3 / 2; --dls-basecard-padding-top:66.6667%;">
                                                 <div class="_j4sd8n">
-                                                  <div aria-describedby="carousel-description" class="c1th86dr card__carousel-desc-wrapper dir dir-ltr" role="group" style="--aspect_ratio_wrapper-ratio:0.666667 / 1; --aspect_ratio_wrapper-padding_fallback:150%; --aspect_ratio_wrapper-position_fallback:relative;">
-                                                    <div class="card__carousel-desc dir dir-ltr">
+                                                  <div aria-describedby="carousel-description" class="c1th86dr visually-hidden-wrapper dir dir-ltr" role="group" style="--aspect_ratio_wrapper-ratio:0.666667 / 1; --aspect_ratio_wrapper-padding_fallback:150%; --aspect_ratio_wrapper-position_fallback:relative;">
+                                                    <div class="visually-hidden dir dir-ltr">
                                                       1 of 20 items showing</div>
                                                     <div class="card__controls-wrapper dir dir-ltr">
                                                       <div class="place__img-action-btns-wrapper o1s954ha dir dir-ltr" style="--media-overlay_top-row-padding:var(--spacer-3);">
@@ -7563,7 +7563,7 @@
                                                   tabindex="-1">
                                                   <div class="_119nin5s notranslate" data-testid="calendar-day-11/06/2022"
                                                     data-is-day-blocked="false" style="width: 46px; height: 46px;">6</div><span
-                                                    class="a8jt5op dir dir-ltr" id="20221106">Part of selected date range.</span>
+                                                    class="visually-hidden dir dir-ltr" id="20221106">Part of selected date range.</span>
                                                 </td>
                                                 <td class="_1ifwywb1" aria-describedby="20221107" role="button"
                                                   aria-disabled="false"
@@ -7571,7 +7571,7 @@
                                                   tabindex="-1">
                                                   <div class="_gkknk2q notranslate" data-testid="calendar-day-11/07/2022"
                                                     data-is-day-blocked="false" style="width: 46px; height: 46px;">7</div><span
-                                                    class="a8jt5op dir dir-ltr" id="20221107">Part of selected date range.</span>
+                                                    class="visually-hidden dir dir-ltr" id="20221107">Part of selected date range.</span>
                                                 </td>
                                                 <td class="_1ifwywb1" aria-describedby="20221108" role="button"
                                                   aria-disabled="false"
@@ -7579,7 +7579,7 @@
                                                   tabindex="-1">
                                                   <div class="_gkknk2q notranslate" data-testid="calendar-day-11/08/2022"
                                                     data-is-day-blocked="false" style="width: 46px; height: 46px;">8</div><span
-                                                    class="a8jt5op dir dir-ltr" id="20221108">Part of selected date range.</span>
+                                                    class="visually-hidden dir dir-ltr" id="20221108">Part of selected date range.</span>
                                                 </td>
                                                 <td class="_1esiloo3" aria-describedby="20221109" role="button"
                                                   aria-disabled="false"
@@ -7587,7 +7587,7 @@
                                                   tabindex="-1">
                                                   <div class="_1gosri9s notranslate" data-testid="calendar-day-11/09/2022"
                                                     data-is-day-blocked="false" style="width: 46px; height: 46px;">9</div><span
-                                                    class="a8jt5op dir dir-ltr" id="20221109">Part of selected date range.</span>
+                                                    class="visually-hidden dir dir-ltr" id="20221109">Part of selected date range.</span>
                                                 </td>
                                                 <td class="_1ba08hns" role="button" aria-disabled="false"
                                                   aria-label="10, Thursday, November 2022. Selected end date. " tabindex="-1">
@@ -8819,7 +8819,7 @@
                   <div class=" dir dir-ltr" role="group" id="flexible-dates-chips"
                     aria-labelledby="flexible-dates-chips-DLS-chipGroup-label">
                     <div class=" dir dir-ltr" id="flexible-dates-chips-DLS-chipGroup-label"><span
-                        class="a8jt5op dir dir-ltr">Flexible dates</span></div>
+                        class="visually-hidden dir dir-ltr">Flexible dates</span></div>
                     <div class="_1o05292">
                       <div class="_1o2zacc"><button id="flexible-dates-checkbox-wishlist-0" class="_12i6oakv"
                           role="radio" aria-checked="true" type="button">Exact dates<span aria-hidden="true"
