--- a/messaging/messages.html
+++ b/messaging/messages.html
@@ -1234,7 +1234,7 @@
                                                     </path>
                                                   </svg></span></button></div>
                                           </div>
-                                          <div class="w1ltfm8b dir dir-ltr"><label class="l1sc6kfc dir dir-ltr"
+                                          <div class="w1ltfm8b dir dir-ltr"><label class="visually-hidden dir dir-ltr"
                                               for="message_input"></label>
                                             <div class="c1w12wz0 dir dir-ltr"><textarea
                                                 class="t17tp91i t1md6muk dir dir-ltr" id="message_input"
@@ -1474,7 +1474,7 @@
                                                     </path>
                                                   </svg></span></button></div>
                                           </div>
-                                          <div class="w1ltfm8b dir dir-ltr"><label class="l1sc6kfc dir dir-ltr"
+                                          <div class="w1ltfm8b dir dir-ltr"><label class="visually-hidden dir dir-ltr"
                                               for="message_input"></label>
                                             <div class="c1w12wz0 dir dir-ltr"><textarea
                                                 class="t17tp91i t1md6muk dir dir-ltr" id="message_input"
@@ -1867,7 +1867,7 @@
                                           class="_1ete8eke">Return to Inbox</button>
                                         <div class="cp68eyg dir dir-ltr">
                                           <div class="_1icr19o" style="width: 0px;"></div>
-                                          <div class="w1ltfm8b dir dir-ltr"><label class="l1sc6kfc dir dir-ltr"
+                                          <div class="w1ltfm8b dir dir-ltr"><label class="visually-hidden dir dir-ltr"
                                               for="message_input"></label>
                                             <div class="c1w12wz0 dir dir-ltr"><textarea
                                                 class="t17tp91i t1md6muk dir dir-ltr" id="message_input"
@@ -3040,7 +3040,7 @@
                                                   </path>
                                                 </svg></span></button></div>
                                         </div>
-                                        <div class="w1ltfm8b dir dir-ltr"><label class="l1sc6kfc dir dir-ltr"
+                                        <div class="w1ltfm8b dir dir-ltr"><label class="visually-hidden dir dir-ltr"
                                             for="message_input"></label>
                                           <div class="c1w12wz0 dir dir-ltr"><textarea
                                               class="t17tp91i t1md6muk dir dir-ltr" id="message_input"
@@ -3293,7 +3293,7 @@
                                                   </path>
                                                 </svg></span></button></div>
                                         </div>
-                                        <div class="w1ltfm8b dir dir-ltr"><label class="l1sc6kfc dir dir-ltr"
+                                        <div class="w1ltfm8b dir dir-ltr"><label class="visually-hidden dir dir-ltr"
                                             for="message_input"></label>
                                           <div class="c1w12wz0 dir dir-ltr"><textarea
                                               class="t17tp91i t1md6muk dir dir-ltr" id="message_input"
@@ -3649,7 +3649,7 @@
                                         class="_1ete8eke">Return to Inbox</button>
                                       <div class="cp68eyg dir dir-ltr">
                                         <div class="_1icr19o" style="width: 0px;"></div>
-                                        <div class="w1ltfm8b dir dir-ltr"><label class="l1sc6kfc dir dir-ltr"
+                                        <div class="w1ltfm8b dir dir-ltr"><label class="visually-hidden dir dir-ltr"
                                             for="message_input"></label>
                                           <div class="c1w12wz0 dir dir-ltr"><textarea
                                               class="t17tp91i t1md6muk dir dir-ltr" id="message_input"
