--- a/payments/payment-confirmed.html
+++ b/payments/payment-confirmed.html
@@ -413,7 +413,7 @@
                                             Hosted in English
                                           </div>
                                           <span class="_60hvkx2"
-                                            ><span class="a8jt5op dir dir-ltr"
+                                            ><span class="visually-hidden dir dir-ltr"
                                               >Rating 5 out of 5; 2
                                               reviews</span
                                             ><span class="_1lzlk52"
@@ -704,7 +704,7 @@
                           </section>
                         </div>
                         <div class="_1wsqynx">
-                          <span class="a8jt5op dir dir-ltr"
+                          <span class="visually-hidden dir dir-ltr"
                             >Footer section</span
                           >
                           <section>
@@ -713,7 +713,7 @@
                                 <div class="_jro6t0">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="visually-hidden dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -738,7 +738,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="visually-hidden dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -778,7 +778,7 @@
                                 <div class="_jro6t0">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="visually-hidden dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -803,7 +803,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="visually-hidden dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -952,7 +952,7 @@
                                 <div class="_jro6t0">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="visually-hidden dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -977,7 +977,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="visually-hidden dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
