--- a/payments/payment.html
+++ b/payments/payment.html
@@ -4278,7 +4278,7 @@
                                                                   aria-labelledby="dropdown-selector-payment_option_selector-group-label-1"
                                                                 >
                                                                   <span
-                                                                    class="a8jt5op dir dir-ltr"
+                                                                    class="visually-hidden dir dir-ltr"
                                                                     id="dropdown-selector-payment_option_selector-group-label-1"
                                                                     >Add payment
                                                                     method</span
@@ -10675,7 +10675,7 @@
     </div>
   </div>
   <div class="_1cnosla">
-    <span class="a8jt5op dir dir-ltr"
+    <span class="visually-hidden dir dir-ltr"
       >Cancel by November 11 at 10:00 AM and you'll get a No refund.</span
     >
     <div aria-hidden="true">
@@ -10689,7 +10689,7 @@
     </div>
   </div>
   <div class="_1cnosla">
-    <span class="a8jt5op dir dir-ltr">Cancel by November 11 at 10:00 AM and you'll get a No refund.</span>
+    <span class="visually-hidden dir dir-ltr">Cancel by November 11 at 10:00 AM and you'll get a No refund.</span>
     <div aria-hidden="true">
       <div class="_dj903s">
         <div class="_v0q64e7">
@@ -10701,7 +10701,7 @@
     </div>
   </div>
   <div class="_1cnosla">
-    <span class="a8jt5op dir dir-ltr">Cancel by November 11 at 10:00 AM and you'll get a No refund.</span>
+    <span class="visually-hidden dir dir-ltr">Cancel by November 11 at 10:00 AM and you'll get a No refund.</span>
     <div aria-hidden="true">
       <div class="_dj903s">
         <div class="_v0q64e7">
@@ -13037,7 +13037,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                     </div>
                   </div>
                   <span
-                    class="a8jt5op dir dir-ltr"
+                    class="visually-hidden dir dir-ltr"
                     aria-atomic="true"
                     aria-live="assertive"
                     >We're getting your trip ready and reviewing payment
