--- a/loaders/messages-loader.html
+++ b/loaders/messages-loader.html
@@ -1017,7 +1017,7 @@
                                                     </path>
                                                   </svg></span></button></div>
                                           </div>
-                                          <div class="w1ltfm8b dir dir-ltr"><label class="l1sc6kfc dir dir-ltr"
+                                          <div class="w1ltfm8b dir dir-ltr"><label class="visually-hidden dir dir-ltr"
                                               for="message_input"></label>
                                             <div class="c1w12wz0 dir dir-ltr"><textarea
                                                 class="t17tp91i t1md6muk dir dir-ltr" id="message_input"
@@ -1257,7 +1257,7 @@
                                                     </path>
                                                   </svg></span></button></div>
                                           </div>
-                                          <div class="w1ltfm8b dir dir-ltr"><label class="l1sc6kfc dir dir-ltr"
+                                          <div class="w1ltfm8b dir dir-ltr"><label class="visually-hidden dir dir-ltr"
                                               for="message_input"></label>
                                             <div class="c1w12wz0 dir dir-ltr"><textarea
                                                 class="t17tp91i t1md6muk dir dir-ltr" id="message_input"
@@ -1650,7 +1650,7 @@
                                           class="_1ete8eke">Return to Inbox</button>
                                         <div class="cp68eyg dir dir-ltr">
                                           <div class="_1icr19o" style="width: 0px;"></div>
-                                          <div class="w1ltfm8b dir dir-ltr"><label class="l1sc6kfc dir dir-ltr"
+                                          <div class="w1ltfm8b dir dir-ltr"><label class="visually-hidden dir dir-ltr"
                                               for="message_input"></label>
                                             <div class="c1w12wz0 dir dir-ltr"><textarea
                                                 class="t17tp91i t1md6muk dir dir-ltr" id="message_input"
